--- a/api/package.json
+++ b/api/package.json
@@ -30,9 +30,11 @@
     "@google-cloud/profiler": "^1.0.1",
     "@google-cloud/trace-agent": "^3.2.1",
     "@sendgrid/mail": "^6.3.1",
-    "body-parser": "^1.9.0",
-    "compression": "^1.7.3",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "core-js": "^3.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "firebase-admin": "^8.0.0",
@@ -40,12 +42,12 @@
     "firebase-tools": "^7.12.1",
     "global": "^4.4.0",
     "graphql": "^14.4.1",
-    "graphql-playground-middleware-express": "^1.7.8",
-    "graphql-tools": "^4.0.3",
-    "helmet": "^3.21.2",
+    "graphql-playground-middleware-express": "^1.7.15",
+    "graphql-tools": "^6.0.5",
+    "helmet": "^3.22.0",
     "http-errors": "1.7.1",
     "lodash": "^4.17.11",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
     "raven": "^2.6.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
