--- a/frontend/package.json
+++ b/frontend/package.json
@@ -169,8 +169,8 @@
     "build-staging": "npm run clean && webpack --config webpack.config.staging.js",
     "prebuild-local": "rimraf dist/*.js && rimraf dist/*.map && rimraf dist/index.html",
     "build-local": "NODE_ENV='local' webpack --config webpack.config.local.js",
-    "deploy-production": "npm run build-production && firebase deploy --only hosting:production-frontend --project libra-production",
-    "deploy-staging": "npm run build-staging && firebase deploy --only hosting:staging-frontend --project=libra-staging",
+    "deploy-production": "npm run build-production && firebase deploy --only hosting:production-frontend --project gpt-production",
+    "deploy-staging": "npm run build-staging && firebase deploy --only hosting:staging-frontend --project=gpt-staging",
     "clean": "rimraf dist/profileEvents.json && rimraf dist/*.LICENSE && rimraf dist/*.js && rimraf dist/*.br && rimraf dist/*.map && rimraf dist/index.html",
     "build-alpha": "npm run clean && webpack --config webpack.config.alpha.js",
     "deploy-alpha": "npm run build-alpha && firebase deploy --only hosting:alpha-frontend --project=libra-production"
