--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "blob": "0.0.5",
     "canvas": "^2.6.0",
     "classnames": "^2.2.6",
-    "connected-react-router": "^6.5.2",
+    "connected-react-router": "^6.8.0",
     "core-js": "^3.2.1",
     "create-object-url": "1.0.2",
     "date-fns": "2.0.0-alpha.7",
@@ -58,8 +58,8 @@
     "react-loadable": "^5.5.0",
     "react-raven": "^1.2.3",
     "react-redux": "^7.1.0",
-    "react-router": "5.0.1",
-    "react-router-dom": "5.0.1",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-select": "2.4.1",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
@@ -68,6 +68,7 @@
     "redux-raven-middleware": "^1.2.0",
     "redux-thunk": "2.3.0",
     "regenerator-runtime": "^0.13.3",
+    "seamless-immutable": "^7.1.4",
     "unfetch": "^4.1.0",
     "uuid": "^3.3.2",
     "xmldom": "^0.1.27"
