--- a/cloudbuild-files/pr-frontend.yaml
+++ b/cloudbuild-files/pr-frontend.yaml
@@ -4,3 +4,8 @@ steps:
   id: BuildFunctions
   args: ['build', '-f', 'Dockerfile', '--tag=gcr.io/$PROJECT_ID/frontend', '.']
 
+- name: 'gcr.io/$PROJECT_ID/frontend'
+  id: TestFunctions
+  args: ['./test.sh', '$_FOLDER', '$_ENVIRONMENT']
+  waitFor:
+  - BuildFunctions
