--- a/frontend/package.json
+++ b/frontend/package.json
@@ -167,7 +167,9 @@
     "build-production": "npm run clean && NODE_ENV='production' webpack --config webpack.config.production.js",
     "test": "NODE_ENV='test' mocha --compilers js:babel-register",
     "start": "node server.js",
-    "build-staging": "npm run clean && webpack --config webpack.config.staging.js",
+    "package-functions-staging": "yarn run build-staging",
+    "package-functions-prod": "yarn run build-prod",
+    "build-staging": "yar run clean && webpack --config webpack.config.staging.js",
     "prebuild-local": "rimraf dist/*.js && rimraf dist/*.map && rimraf dist/index.html",
     "build-local": "NODE_ENV='local' webpack --config webpack.config.local.js",
     "deploy-production": "npm run build-production && firebase deploy --only hosting:production-frontend --project gpt-production",
