--- a/cloudbuild-files/deploy-api.yaml
+++ b/cloudbuild-files/deploy-api.yaml
@@ -10,7 +10,7 @@ steps:
 #   id: TestFunctions
 #   args: ['./test.sh', '$_FOLDER']
 
-- name: 'gcr.io/$PROJECT_ID/libra-api-$_ENVIRONMENT'
+- name: 'gcr.io/$PROJECT_ID/api'
   id: DeployApi
   args: ['./deploy-api-firebase.sh', '$_FOLDER', '$_ENVIRONMENT', '$_FIRE_TOKEN', 'libra', '$_PROJECT', '$_FUNCTION_NAME']
   waitFor:
