--- a/cloudbuild-files/deploy-frontend.yaml
+++ b/cloudbuild-files/deploy-frontend.yaml
@@ -6,8 +6,6 @@ steps:
 
 - name: 'gcr.io/$PROJECT_ID/frontend'
   id: DeployFrontend
-  args: ['./deploy-firebase.sh', '$_FOLDER', '$_ENVIRONMENT', '$_FIRE_TOKEN']
+  args: ['./deploy-hosting.sh', '$_FOLDER', '$_ENVIRONMENT', '$_PROJECT', '$_FIRE_TOKEN']
   waitFor:
   - BuildFunctions
-
-# images: ['gcr.io/$PROJECT_ID/libra-frontend-$_ENVIRONMENT']
