--- a/cloudbuild-files/pr-api.yaml
+++ b/cloudbuild-files/pr-api.yaml
@@ -6,6 +6,6 @@ steps:
 
 - name: 'gcr.io/$PROJECT_ID/api'
   id: TestFunctions
-  args: ['./test.sh', '$_FOLDER', '$_ENVIRONMENT']
+  args: ['./test-function.sh', '$_FOLDER', '$_ENVIRONMENT']
   waitFor:
   - BuildFunctions
