--- a/cloudbuild-files/pr-frontend.yaml
+++ b/cloudbuild-files/pr-frontend.yaml
@@ -6,6 +6,6 @@ steps:
 
 - name: 'gcr.io/$PROJECT_ID/frontend'
   id: TestFunctions
-  args: ['./test.sh', '$_FOLDER', '$_ENVIRONMENT']
+  args: ['./test-hosting.sh', '$_FOLDER', '$_ENVIRONMENT']
   waitFor:
   - BuildFunctions
