--- a/frontend/firebase.json
+++ b/frontend/firebase.json
@@ -2,32 +2,22 @@
   "database": {
     "rules": "database.rules.json"
   },
-  "hosting": [
-    {
-      "target": "staging-frontend",
-      "public": "dist",
-      "rewrites": [
-        {
-          "source": "/graphql", "function": "graphql"
-        },
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ]
-    },
-    {
-      "target": "production-frontend",
-      "public": "dist",
-      "rewrites": [
-        {
-          "source": "/graphql", "function": "graphql"
-        },
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ]
-    }
-  ]
+  "hosting": {
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "/graphql",
+        "function": "graphql"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
