--- a/frontend/package.json
+++ b/frontend/package.json
@@ -162,20 +162,16 @@
     "why-did-you-update": "^1.0.6"
   },
   "scripts": {
-    "dev": "webpack-dev-server --content-base src --inline  --config webpack.config.js",
-    "sandbox": "webpack-dev-server --inline  --config webpack.config.sandbox.js",
-    "build-production": "yarn run clean && NODE_ENV='production' webpack --config webpack.config.production.js",
-    "test": "NODE_ENV='test' mocha --compilers js:babel-register",
-    "start": "node server.js",
     "package-functions-staging": "yarn run build-staging",
     "package-functions-prod": "yarn run build-prod",
+    "dev": "webpack-dev-server --content-base src --inline  --config webpack.config.js",
+    "sandbox": "webpack-dev-server --inline  --config webpack.config.sandbox.js",
+    "build-prod": "yarn run clean && NODE_ENV='production' webpack --config webpack.config.production.js",
+    "test": "NODE_ENV='test' mocha --compilers js:babel-register",
+    "start": "node server.js",
     "build-staging": "yarn run clean && webpack --config webpack.config.staging.js",
     "prebuild-local": "rimraf dist/*.js && rimraf dist/*.map && rimraf dist/index.html",
     "build-local": "NODE_ENV='local' webpack --config webpack.config.local.js",
-
-    "deploy-prod": "yarn run build-production && firebase deploy --only hosting:production-frontend --project gpt-production",
-    "deploy-staging": "yarn run build-staging && firebase deploy --only hosting:staging-frontend --project=gpt-staging",
-
     "clean": "rimraf dist/profileEvents.json && rimraf dist/*.LICENSE && rimraf dist/*.js && rimraf dist/*.br && rimraf dist/*.map && rimraf dist/index.html",
     "build-alpha": "yarn run clean && webpack --config webpack.config.alpha.js",
     "deploy-alpha": "yarn run build-alpha && firebase deploy --only hosting:alpha-frontend --project=libra-production"
