--- a/butler-function/package.json
+++ b/butler-function/package.json
@@ -16,7 +16,8 @@
     "package-functions-alpha": "funpack -e alpha",
     "build-staging": "funpack -e staging && cd functions && yarn install",
     "build-alpha": "funpack -e staging && cd functions",
-    "fix": "eslint --fix functionsES6/*",
+    "lint": "eslint functionsES6/* ",
+    "lint-fix": "eslint functionsES6/* --fix",
     "predeploy-staging": "funpack -e staging",
     "deploy-staging": "firebase deploy --project gpt-staging --only functions:butler",
     "preshell": "funpack -e staging",
@@ -70,14 +71,14 @@
     "babel-plugin-add-module-exports": "1.0.0",
     "babel-plugin-transform-imports": "^1.5.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^5.0.0",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-flow-vars": "^0.5.0",
     "eslint-plugin-flowtype": "^3.2.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0",
-    "firebase-functions-test": "^0.2.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
     "flow-bin": "^0.87.0",
     "jest": "^23.6.0"
   },
