--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,8 @@
     "dev": "export GCLOUD_PROJECT=libra-staging ; nodemon start --watch functionsES6",
     "dev-alpha": "nodemon --exec 'npm run start-alpha' --watch functionsES6",
     "flow": "flow",
+    "lint": "eslint functionsES6/* ",
+    "lint-fix": "eslint functionsES6/* --fix",
     "pretest": "funpack -e local",
     "test": "jest functions/*",
     "package-functions-prod": "funpack -e production",
@@ -35,8 +37,8 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "cors": "^2.8.5",
     "core-js": "^3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "firebase-admin": "^8.0.0",
@@ -78,13 +80,14 @@
     "babel-plugin-add-module-exports": "1.0.0",
     "babel-plugin-transform-imports": "^1.5.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^5.0.0",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-flow-vars": "^0.5.0",
     "eslint-plugin-flowtype": "^3.2.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
     "flow-bin": "^0.87.0",
     "jest": "^23.6.0"
   },
