--- a/butler-function/package.json
+++ b/butler-function/package.json
@@ -41,7 +41,7 @@
     "core-js": "^3.0",
     "firebase-admin": "^8.13.0",
     "firebase-functions": "^3.6.1",
-    "firebase-tools": "^8.4.1",
+    "firebase-tools": "^8.11.2",
     "global": "^4.4.0",
     "promise-ratelimit": "^0.0.3",
     "raven": "^2.6.4",
@@ -57,8 +57,8 @@
     "@babel/plugin-proposal-json-strings": "7.2.0",
     "@babel/plugin-proposal-numeric-separator": "7.2.0",
     "@babel/plugin-proposal-throw-expressions": "7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-syntax-import-meta": "7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/plugin-transform-destructuring": "7.2.0",
     "@babel/plugin-transform-flow-strip-types": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
@@ -67,7 +67,7 @@
     "@babel/preset-flow": "^7.0.0",
     "@containerlabs/funpack": "^1.0.0",
     "@firebase/app-types": "0.6.1",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-add-module-exports": "1.0.2",
     "babel-plugin-transform-imports": "^2.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
@@ -75,7 +75,7 @@
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-flow-vars": "^0.5.0",
     "eslint-plugin-flowtype": "^3.2.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
