--- a/butler-function/package.json
+++ b/butler-function/package.json
@@ -35,7 +35,6 @@
     "@babel/runtime": "7.2.0",
     "@containerlabs/react-apollo-shared": "^3.2.0",
     "@google-cloud/firestore": "^3.4.1",
-    "@sendgrid/mail": "^6.3.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "core-js": "^3.0",
@@ -62,7 +61,7 @@
     "@babel/plugin-transform-destructuring": "7.2.0",
     "@babel/plugin-transform-flow-strip-types": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/plugin-transform-spread": "7.2.0",
+    "@babel/plugin-transform-spread": "^7.11.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-flow": "^7.0.0",
     "@containerlabs/funpack": "^1.0.0",
@@ -79,7 +78,7 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "flow-bin": "^0.87.0",
+    "flow-bin": "^0.134.0",
     "jest": "^23.6.0"
   },
   "sideEffects": false,
