--- a/butler-function/package.json
+++ b/butler-function/package.json
@@ -47,7 +47,7 @@
     "react-router": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.2.0",
+    "@babel/cli": "^7.11.5",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/plugin-proposal-decorators": "7.2.0",
@@ -62,7 +62,7 @@
     "@babel/plugin-transform-flow-strip-types": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/plugin-transform-spread": "^7.11.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-flow": "^7.0.0",
     "@containerlabs/funpack": "^1.0.0",
     "@firebase/app-types": "0.6.1",
@@ -79,7 +79,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "flow-bin": "^0.134.0",
-    "jest": "^23.6.0"
+    "jest": "^26.4.2"
   },
   "sideEffects": false,
   "private": true
