--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
-    "@containerlabs/react-apollo-shared": "3.2.0",
+    "@containerlabs/shared-nodejs-web": "^1.2.0",
     "@date-io/core": "^1.3.6",
     "@firebase/app": "0.4.14",
     "@firebase/app-types": "^0.4.3",
     "@firebase/auth": "0.11.8",
     "@firebase/storage": "0.3.9",
     "@firebase/util": "^0.2.25",
-    "@material-ui/core": "^4.9.1",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.41",
     "@material-ui/pickers": "^3.2.10",
@@ -49,11 +49,11 @@
     "moment": "^2.29.0",
     "query-string": "^6.13.4",
     "raven-js": "^3.27.0",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-apollo": "^3.1.3",
     "react-avatar-editor": "^11.0.4",
     "react-cookie": "^4.0.3",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-dropzone": "^7.0.1",
     "react-loadable": "^5.5.0",
     "react-raven": "^1.2.3",
@@ -61,7 +61,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-select": "2.4.1",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-form": "^8.2.6",
     "redux-form-validation": "1.0.0-rc1",
     "redux-promise-middleware": "^6.0.1",
