--- a/api/package.json
+++ b/api/package.json
@@ -13,10 +13,10 @@
     "lint-fix": "eslint functionsES6/* --fix",
     "pretest": "funpack -e local",
     "test": "jest functions/*",
-    "package-functions-prod": "funpack -e production",
-    "package-functions-staging": "funpack -e staging",
-    "package-functions-local": "funpack -e local",
-    "package-functions-alpha": "funpack -e alpha",
+    "copy-package": "cp package.json functionsES6/package.json && cp yarn.lock functionsES6/yarn.lock",
+    "package-functions-prod": "yarn run copy-package && funpack -e production",
+    "package-functions-staging": "yarn run copy-package && funpack -e staging",
+    "package-functions-local": "yarn run copy-package && funpack -e local",
     "build-staging": "funpack -e staging && cd functions && yarn install",
     "build-alpha": "funpack -e staging && cd functions",
     "fix": "eslint --fix functionsES6/*",
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.2.0",
-    "@containerlabs/react-apollo-shared": "^2.4.0",
+    "@containerlabs/shared-nodejs-function": "^1.8.0",
     "@google-cloud/firestore": "^4.2.0",
     "@google-cloud/profiler": "^1.0.1",
     "@google-cloud/trace-agent": "^5.1.0",
