--- a/butler-function/package.json
+++ b/butler-function/package.json
@@ -10,10 +10,10 @@
     "flow": "flow",
     "pretest": "funpack -e local",
     "test": "jest functions/*",
-    "package-functions-prod": "funpack -e production",
-    "package-functions-staging": "funpack -e staging",
-    "package-functions-local": "funpack -e local",
-    "package-functions-alpha": "funpack -e alpha",
+    "package-functions-prod": "yarn run copy-package && funpack -e production",
+    "package-functions-staging": "yarn run copy-package && funpack -e staging",
+    "package-functions-local": "yarn run copy-package && funpack -e local",
+    "copy-package": "cp package.json functionsES6/package.json && cp yarn.lock functionsES6/yarn.lock",
     "build-staging": "funpack -e staging && cd functions && yarn install",
     "build-alpha": "funpack -e staging && cd functions",
     "lint": "eslint functionsES6/* ",
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.2.0",
-    "@containerlabs/react-apollo-shared": "^3.2.0",
+    "@containerlabs/shared-nodejs-function": "^1.8.0",
     "@google-cloud/firestore": "^3.4.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
