--- a/api/package.json
+++ b/api/package.json
@@ -28,27 +28,27 @@
     "node": "10"
   },
   "dependencies": {
-    "@babel/runtime": "7.2.0",
-    "@containerlabs/shared-nodejs-function": "^1.8.0",
-    "@google-cloud/firestore": "^4.2.0",
+    "@babel/runtime": "^7.11.2",
+    "@containerlabs/shared-nodejs-function": "^1.2.0",
+    "@google-cloud/firestore": "^4.4.0",
     "@google-cloud/profiler": "^1.0.1",
     "@google-cloud/trace-agent": "^5.1.0",
     "@sendgrid/mail": "^6.3.1",
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "core-js": "^3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.10.2",
-    "firebase-admin": "^9.2.0",
+    "firebase-admin": "^9.0.0",
     "firebase-functions": "^3.11.0",
-    "firebase-tools": "^7.12.1",
+    "firebase-tools": "^8.11.2",
     "global": "^4.4.0",
     "graphql": "^14.4.1",
     "graphql-playground-middleware-express": "^1.7.21",
     "graphql-tools": "^6.0.5",
-    "helmet": "^3.22.0",
+    "helmet": "^4.1.1",
     "http-errors": "1.8.0",
     "lodash": "^4.17.20",
     "morgan": "^1.10.0",
@@ -78,7 +78,7 @@
     "@firebase/app-types": "0.6.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-add-module-exports": "1.0.4",
-    "babel-plugin-transform-imports": "^1.5.1",
+    "babel-plugin-transform-imports": "^2.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "eslint": "^5.0.0",
     "eslint-config-airbnb": "^18.1.0",
