--- a/butler-function/package.json
+++ b/butler-function/package.json
@@ -33,18 +33,17 @@
   },
   "dependencies": {
     "@babel/runtime": "7.2.0",
-    "@containerlabs/shared-nodejs-function": "^1.8.0",
-    "@google-cloud/firestore": "^3.4.1",
+    "@containerlabs/shared-nodejs-function": "^1.2.0",
+    "@google-cloud/firestore": "^4.2.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "core-js": "^3.0",
-    "firebase-admin": "^8.13.0",
-    "firebase-functions": "^3.6.1",
+    "firebase-admin": "^9.0.0",
+    "firebase-functions": "^3.11.0",
+    "lodash": "^4.17.15",
     "firebase-tools": "^8.11.2",
     "global": "^4.4.0",
-    "promise-ratelimit": "^0.0.3",
-    "raven": "^2.6.4",
-    "react-router": "^5.2.0"
+    "promise-ratelimit": "^0.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.5",
