--- a/butler-function/package.json
+++ b/butler-function/package.json
@@ -35,7 +35,7 @@
     "@babel/runtime": "^7.11.2",
     "@containerlabs/shared-nodejs-function": "^1.2.0",
     "@google-cloud/firestore": "^4.4.0",
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "core-js": "^3.0",
     "firebase-admin": "^9.0.0",
@@ -46,37 +46,36 @@
     "promise-ratelimit": "^0.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.5",
+    "@babel/cli": "7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/plugin-proposal-decorators": "7.10.5",
     "@babel/plugin-proposal-export-namespace-from": "7.10.4",
-    "@babel/plugin-proposal-function-sent": "^7.10.4",
+    "@babel/plugin-proposal-function-sent": "7.10.4",
     "@babel/plugin-proposal-json-strings": "^7.10.4",
     "@babel/plugin-proposal-numeric-separator": "^7.10.4",
     "@babel/plugin-proposal-throw-expressions": "^7.10.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/plugin-transform-destructuring": "^7.10.4",
-    "@babel/plugin-transform-flow-strip-types": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/plugin-transform-spread": "^7.11.0",
+    "@babel/plugin-transform-spread": "7.11.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-flow": "^7.10.4",
-    "@containerlabs/funpack": "^1.0.0",
+    "@containerlabs/funpack": "^1.8.0",
     "@firebase/app-types": "0.6.1",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-add-module-exports": "^1.0.4",
+    "babel-plugin-add-module-exports": "1.0.4",
     "babel-plugin-transform-imports": "^2.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-flow-vars": "^0.5.0",
-    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react": "^7.21.2",
     "flow-bin": "^0.134.0",
     "jest": "^26.4.2"
   },
