--- a/api/package.json
+++ b/api/package.json
@@ -31,30 +31,25 @@
     "@babel/runtime": "^7.11.2",
     "@containerlabs/shared-nodejs-function": "^1.2.0",
     "@google-cloud/firestore": "^4.4.0",
-    "@google-cloud/profiler": "^1.0.1",
-    "@google-cloud/trace-agent": "^5.1.0",
-    "@sendgrid/mail": "^6.3.1",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "core-js": "^3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-graphql": "^0.10.2",
+    "express-graphql": "^0.11.0",
     "firebase-admin": "^9.0.0",
     "firebase-functions": "^3.11.0",
     "firebase-tools": "^8.11.2",
     "global": "^4.4.0",
-    "graphql": "^14.4.1",
+    "graphql": "^15.3.0",
     "graphql-playground-middleware-express": "^1.7.21",
-    "graphql-tools": "^6.0.5",
+    "graphql-tools": "^6.2.4",
     "helmet": "^4.1.1",
     "http-errors": "1.8.0",
     "lodash": "^4.17.20",
     "morgan": "^1.10.0",
-    "raven": "^2.6.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.6.3"
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
     "@babel/cli": "7.11.6",
@@ -65,30 +60,29 @@
     "@babel/plugin-proposal-function-sent": "7.10.4",
     "@babel/plugin-proposal-json-strings": "^7.10.4",
     "@babel/plugin-proposal-numeric-separator": "^7.10.4",
-    "@babel/plugin-proposal-throw-expressions": "7.2.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/plugin-transform-destructuring": "^7.10.4",
-    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/plugin-transform-spread": "7.11.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-flow": "^7.10.4",
-    "@containerlabs/funpack": "^1.0.0",
+    "@containerlabs/funpack": "^1.8.0",
     "@firebase/app-types": "0.6.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-add-module-exports": "1.0.4",
     "babel-plugin-transform-imports": "^2.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "eslint": "^5.0.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-flow-vars": "^0.5.0",
-    "eslint-plugin-flowtype": "^3.13.0",
+    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.2",
-    "flow-bin": "^0.87.0",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "flow-bin": "^0.134.0",
     "jest": "^26.4.2"
   },
   "sideEffects": false,
