--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,28 +5,19 @@
   "main": "webpack.config.js",
   "dependencies": {
     "@containerlabs/shared-nodejs-web": "^1.2.0",
-    "@date-io/core": "^1.3.6",
-    "@firebase/app": "0.4.14",
-    "@firebase/app-types": "^0.4.3",
-    "@firebase/auth": "0.11.8",
-    "@firebase/storage": "0.3.9",
-    "@firebase/util": "^0.2.25",
+    "@firebase/app": "^0.6.11",
+    "@firebase/app-types": "^0.6.1",
+    "@firebase/auth": "^0.14.9",
+    "@firebase/storage": "^0.3.43",
+    "@firebase/util": "^0.3.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.41",
-    "@material-ui/pickers": "^3.2.10",
     "@sentry/browser": "^5.15.5",
-    "apollo-cache": "^1.3.4",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.13",
-    "apollo-link-error": "^1.1.12",
-    "apollo-link-http": "^1.5.16",
+    "@apollo/client": "^3.2.1",
+    "apollo-link-error": "^1.1.13",
     "apollo-link-retry": "^2.2.16",
     "apollo-utilities": "^1.3.4",
-    "array-to-csv": "^1.0.1",
     "blob": "0.0.5",
-    "canvas": "^2.6.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
     "core-js": "^3.2.1",
@@ -35,90 +26,76 @@
     "decode-uri-component": "^0.2.0",
     "detect-browser": "^5.1.1",
     "filesize": "^3.6.1",
-    "graphql": "^14.3.1",
+    "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "history": "^4.7.2",
     "immutable": "4.0.0-rc.12",
     "jsdom": "^13.0.0",
     "json-loader": "^0.5.4",
-    "jspdf": "1.5.3",
-    "jspdf-autotable": "^3.0.13",
-    "jspdf-customfonts": "^0.0.4-rc.4",
     "lodash": "^4.17.15",
     "lodash.flowright": "3.5.0",
     "moment": "^2.29.0",
     "query-string": "^6.13.4",
-    "raven-js": "^3.27.0",
     "react": "^16.13.1",
-    "react-apollo": "^3.1.3",
-    "react-avatar-editor": "^11.0.4",
-    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
-    "react-dropzone": "^7.0.1",
     "react-loadable": "^5.5.0",
-    "react-raven": "^1.2.3",
-    "react-redux": "^7.1.0",
+    "react-redux": "^7.2.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-select": "2.4.1",
     "redux": "^4.0.5",
-    "redux-form": "^8.2.6",
-    "redux-form-validation": "1.0.0-rc1",
     "redux-promise-middleware": "^6.0.1",
-    "redux-raven-middleware": "^1.2.0",
     "redux-thunk": "2.3.0",
     "regenerator-runtime": "^0.13.7",
     "seamless-immutable": "^7.1.4",
-    "unfetch": "^4.1.0",
-    "uuid": "^3.3.2",
-    "xmldom": "^0.1.27"
+    "unfetch": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.0",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@babel/plugin-proposal-export-namespace-from": "^7.8.0",
-    "@babel/plugin-proposal-function-sent": "^7.8.0",
-    "@babel/plugin-proposal-json-strings": "^7.8.0",
-    "@babel/plugin-proposal-numeric-separator": "7.2.0",
-    "@babel/plugin-proposal-throw-expressions": "7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/plugin-transform-arrow-functions": "^7.2.0",
-    "@babel/plugin-transform-block-scoped-functions": "^7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
+    "@babel/plugin-proposal-function-sent": "^7.10.4",
+    "@babel/plugin-proposal-json-strings": "^7.10.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/plugin-transform-arrow-functions": "^7.10.4",
+    "@babel/plugin-transform-block-scoped-functions": "^7.10.4",
     "@babel/plugin-transform-block-scoping": "^7.11.1",
-    "@babel/plugin-transform-classes": "^7.8.0",
-    "@babel/plugin-transform-computed-properties": "^7.2.0",
-    "@babel/plugin-transform-destructuring": "^7.8.0",
+    "@babel/plugin-transform-classes": "^7.10.4",
+    "@babel/plugin-transform-computed-properties": "^7.10.4",
+    "@babel/plugin-transform-destructuring": "^7.10.4",
     "@babel/plugin-transform-duplicate-keys": "^7.10.4",
     "@babel/plugin-transform-for-of": "^7.10.4",
-    "@babel/plugin-transform-function-name": "^7.8.0",
-    "@babel/plugin-transform-literals": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
-    "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/plugin-transform-object-super": "^7.8.0",
-    "@babel/plugin-transform-parameters": "^7.8.0",
-    "@babel/plugin-transform-proto-to-assign": "^7.8.0",
+    "@babel/plugin-transform-function-name": "^7.10.4",
+    "@babel/plugin-transform-literals": "^7.10.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/plugin-transform-object-assign": "^7.10.4",
+    "@babel/plugin-transform-object-super": "^7.10.4",
+    "@babel/plugin-transform-parameters": "^7.10.4",
+    "@babel/plugin-transform-proto-to-assign": "^7.10.4",
     "@babel/plugin-transform-react-constant-elements": "^7.10.4",
-    "@babel/plugin-transform-regenerator": "^7.8.0",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/plugin-transform-shorthand-properties": "^7.2.0",
-    "@babel/plugin-transform-spread": "^7.8.0",
-    "@babel/plugin-transform-sticky-regex": "^7.2.0",
-    "@babel/plugin-transform-template-literals": "^7.8.0",
-    "@babel/plugin-transform-typeof-symbol": "^7.2.0",
-    "@babel/plugin-transform-unicode-regex": "^7.8.0",
-    "@babel/preset-env": "^7.8.0",
-    "@babel/preset-flow": "^7.0.0",
+    "@babel/plugin-transform-regenerator": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/plugin-transform-shorthand-properties": "^7.10.4",
+    "@babel/plugin-transform-spread": "^7.10.4",
+    "@babel/plugin-transform-sticky-regex": "^7.10.4",
+    "@babel/plugin-transform-template-literals": "^7.10.4",
+    "@babel/plugin-transform-typeof-symbol": "^7.10.4",
+    "@babel/plugin-transform-unicode-regex": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-flow": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@babel/register": "^7.11.5",
-    "@babel/runtime": "^7.8.0",
+    "@babel/runtime": "^7.10.4",
     "@hot-loader/react-dom": "^16.13.0",
     "@sentry/webpack-plugin": "^1.13.0",
     "@types/react": "^16.8.0",
-    "autoprefixer": "^9.6.1",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8.1.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-add-module-exports": "1.0.2",
     "babel-plugin-check-es2015-constants": "7.0.0-beta.3",
     "babel-plugin-inline-react-svg": "^1.1.0",
@@ -128,38 +105,34 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-webpack-aliases": "1.1.3",
     "css-loader": "^3.4.2",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-import-resolver-webpack": "^0.11.0",
-    "eslint-plugin-compat": "^2.6.3",
+    "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-flow-vars": "^0.5.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "4.1.0",
     "file-loader": "^6.1.0",
-    "flow-bin": "^0.87.0",
+    "flow-bin": "^0.134.0",
     "git-revision-webpack-plugin": "^3.0.3",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "html-loader": "1.3.1",
+    "html-webpack-plugin": "^4.5.0",
     "mocha": "^8.1.1",
-    "postcss-loader": "3.0.0",
     "prop-types": "^15.5.0",
     "react-addons-perf": "16.0.0-alpha.3",
     "react-hot-loader": "4.12.19",
     "redux-devtools-extension": "^2.13.7",
     "redux-logger": "3.0.6",
-    "rimraf": "2.6.3",
-    "style-loader": "1.1.3",
-    "stylelint": "^8.0.0",
-    "stylelint-webpack-plugin": "^0.10.5",
+    "rimraf": "^3.0.2",
+    "style-loader": "1.2.1",
     "terser-webpack-plugin": "^2.3.4",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "3.11.0",
-    "why-did-you-update": "^1.0.6"
+    "url-loader": "^4.1.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "3.11.0"
   },
   "scripts": {
     "package-functions-staging": "yarn run build-staging",
